# wormhole-svm

clients/: .gitignore
clients/js/: .env.sample  README.md  package.json
clients/js/src/: emitter.ts  utils.ts  vaa.ts
clients/js/src/chains/generic/: getOriginalAsset.ts  getWrappedAssetAddress.ts  provider.ts
clients/js/src/cmds/: editVaa.ts  generate.ts  index.ts  status.ts  submit.ts  transfer.ts
clients/js/src/cmds/info/: registrations.ts
clients/js/src/consts/: contracts.ts  networks.ts
dashboards/: Wormhole.json
deployments/mainnet/: nftBridgeVAAs.csv  tokenBridgeVAAs.csv
node/cmd/ccq/: utils.go
node/cmd/guardiand/: adminclient.go  adminnodes.go  admintemplate.go  node.go
node/cmd/spy/: spy.go
node/hack/governor/: package.json
node/hack/governor/src/: index.ts
node/hack/query/: send_req.go
node/hack/query/ccqlistener/: Dockerfile  ccqlistener.go
node/pkg/adminrpc/: adminserver.go  adminserver_test.go
node/pkg/common/: chainlock_test.go  mode.go  mode_test.go  readiness.go  readiness_test.go
node/pkg/db/: governor_test.go  purge_vaas_test.go
node/pkg/governor/: devnet_config.go  governor.go  mainnet_chains.go  mainnet_tokens_test.go  manual_tokens.go  testnet_config.go
node/pkg/node/: adminServiceRunnable.go  node.go  node_test.go  options.go
node/pkg/p2p/: p2p.go
node/pkg/processor/: cleanup.go  processor.go
node/pkg/proto/node/v1/: node.pb.go  node.pb.gw.go  node_grpc.pb.go
node/pkg/proto/publicrpc/v1/: publicrpc.pb.go
node/pkg/publicrpc/: publicrpcserver.go
node/pkg/query/: query.go  query_test.go  request.go  request_test.go  response.go  response_test.go
node/pkg/watchers/solana/: client.go
proto/node/v1/: node.proto
proto/publicrpc/v1/: publicrpc.proto
scripts/: devnet-consts.json  register-all-chains.sh
sdk/: devnet_consts.go  mainnet_consts.go  testnet_consts.go
sdk/js/: package.json
sdk/js-query/src/mock/: index.ts  mock.test.ts
sdk/js-query/src/query/: index.ts  request.ts  response.test.ts  response.ts  solana.test.ts
sdk/js/src/: index.ts
sdk/js/src/bridge/: getEmitterAddress.ts  parseSequenceFromLog.ts
sdk/js/src/mock/: misc.ts  nftBridge.ts  tokenBridge.ts  wormhole.ts
sdk/js/src/nft_bridge/: getForeignAsset.ts  getIsTransferCompleted.ts  getIsWrappedAsset.ts  getOriginalAsset.ts  redeem.ts  transfer.ts
sdk/js/src/nft_bridge/__tests__/: integration.ts
sdk/js/src/nft_bridge/__tests__/utils/: consts.ts  getSignedVaa.ts
sdk/js/src/relayer/: consts.ts  structs.ts
sdk/js/src/token_bridge/: attest.ts  createWrapped.ts  getForeignAsset.ts  getIsTransferCompleted.ts  getIsWrappedAsset.ts  getOriginalAsset.ts  redeem.ts  transfer.ts  updateWrapped.ts
sdk/js/src/token_bridge/__tests__/utils/: consts.ts  helpers.ts
sdk/js/src/utils/: array.ts  consts.ts  index.ts  repairVaa.ts
sdk/rust/core/src/: chain.rs  lib.rs  vaa.rs
sdk/rust/serde_wormhole/src/: lib.rs
sdk/vaa/: payloads.go  payloads_test.go  structs.go  structs_test.go
solana/: Cargo.toml  Makefile.local  rust-toolchain
solana/bridge/client/: Cargo.toml
solana/bridge/cpi_poster/: Cargo.toml
solana/bridge/program/: Cargo.toml
solana/bridge/program_stub/: Cargo.toml
solana/migration/: Cargo.toml
solana/modules/nft_bridge/program/: Cargo.toml
solana/modules/nft_bridge/program/src/api/: complete_transfer.rs
solana/modules/token_bridge/client/: Cargo.toml
solana/modules/token_bridge/program/: Cargo.toml
solana/solitaire/program/: Cargo.toml
solana/solitaire/rocksalt/: Cargo.toml
