[package]
name = "wormhole-migration"
version = "0.1.0"
description = "Created with Rocksalt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wormhole_migration"

[features]
no-entrypoint = ["solitaire/no-entrypoint", "rand"]
trace = ["solitaire/trace"]
wasm = ["no-entrypoint", "wasm-bindgen"]
client = ["no-entrypoint"]
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = "=0.9.3"
byteorder = "1.4.3"
rocksalt = { path = "../solitaire/rocksalt" }
solitaire = { path = "../solitaire/program" }
sha3 = "0.9.1"
solana-program = "=1.17.28"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"], optional = true }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.7.3", optional = true }

[dev-dependencies]
hex = "*"
hex-literal = "0.3.1"
libsecp256k1 = { version = "0.6.0", features = [] }
solana-client = "=1.17.28"
solana-sdk = "=1.17.28"

