[package]
name = "wormhole-bridge-solana"
version = "0.1.0"
description = "Wormhole bridge core contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge"

[features]
client = ["no-entrypoint"]
cpi = ["no-entrypoint"]
default = []
wasm = ["no-entrypoint", "wasm-bindgen"]
no-entrypoint = ["instructions", "solitaire/no-entrypoint"]
trace = ["solitaire/trace"]
instructions = []

[dependencies]
borsh = "=0.9.3"
byteorder = "1.4.3"
primitive-types = { version = "0.12.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9.1"
solana-program = "=1.17.28"
solitaire = { path = "../../solitaire/program" }
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"], optional = true }

[dev-dependencies]
hex = "*"
rand = "0.7.3"
getrandom = {version = "0.2.6", features = ["custom"]}
hex-literal = "0.3.1"
libsecp256k1 = { version = "0.6.0", features = [] }
solana-program-test = "=1.17.28"
solana-sdk = "=1.17.28"
