[package]
name = "bridge_stub"
version = "0.1.0"
description = "Wormhole bridge core contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge_stub"

[features]
client = ["no-entrypoint"]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = ["solitaire/no-entrypoint"]
trace = ["solitaire/trace"]

[dependencies]
borsh = "=0.9.3"
byteorder = "1.4.3"
primitive-types = { version = "0.12.2", default-features = false }
sha3 = "0.9.1"
solana-program = "=1.17.28"
solitaire = { path = "../../solitaire/program" }
wormhole-bridge-solana = { path = "../program", features = ["no-entrypoint"] }

[dev-dependencies]
hex = "*"
rand = "0.7.3"
hex-literal = "0.3.1"
libsecp256k1 = { version = "0.6.0", features = [] }
solana-client = "=1.17.28"
solana-sdk = "=1.17.28"
