[package]
name = "nft-bridge"
version = "0.1.0"
description = "Created with Rocksalt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_bridge"

[features]
no-entrypoint = ["solitaire/no-entrypoint", "instructions"]
trace = ["solitaire/trace"]
wasm = ["no-entrypoint", "wasm-bindgen"]
client = ["no-entrypoint"]
cpi = ["no-entrypoint"]
instructions = []
default = []

[dependencies]
wormhole-bridge-solana = { path = "../../../bridge/program", features = ["no-entrypoint", "cpi"] }
borsh = "=0.9.3"
bstr = "0.2.16"
byteorder = "1.4.3"
rocksalt = { path = "../../../solitaire/rocksalt" }
solitaire = { path = "../../../solitaire/program" }
sha3 = "0.9.1"
solana-program = "=1.17.28"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }
primitive-types = { version = "0.12.2", default-features = false }
spl-token-metadata = { git = "https://github.com/gotmyname2018/mpl-token-metadata", rev = "fb2530905cd0df275bdd18dc843cef4358d2e74d", package = "mpl-token-metadata" }
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"], optional = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
hex = "*"
hex-literal = "0.3.1"
libsecp256k1 = { version = "0.6.0", features = [] }
rand = "0.7.3"
solana-program-test = "=1.17.28"
solana-sdk = "=1.17.28"
